k8s/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unlucky-boys-client
spec:
  replicas: 2
  selector:
    matchLabels:
      app: unlucky-boys-client
  template:
    metadata:
      labels:
        app: unlucky-boys-client
    spec:
      containers:
        - name: client
          image: ghcr.io/example/unlucky-boys-client:latest
          ports:
            - containerPort: 4321
---
apiVersion: v1
kind: Service
metadata:
  name: unlucky-boys-client
spec:
  selector:
    app: unlucky-boys-client
  ports:
    - port: 4321
      targetPort: 4321
