k8s/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unlucky-boys-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unlucky-boys-redis
  template:
    metadata:
      labels:
        app: unlucky-boys-redis
    spec:
      containers:
        - name: redis
          image: redis:7.4.2
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: unlucky-boys-redis
spec:
  selector:
    app: unlucky-boys-redis
  ports:
    - port: 6379
      targetPort: 6379
