k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unlucky-boys
spec:
  rules:
    - host: unluckyboys.example.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: unlucky-boys-server
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unlucky-boys-client
                port:
                  number: 4321
